# vaultpassnative

./: .cargo-config.toml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TECHNICAL.md  cargo-sources.json  com.vaultpass.VaultPass.desktop  com.vaultpass.VaultPass.json  com.vaultpass.VaultPass.metainfo.xml  com.vaultpass.VaultPass.yaml  io.github.UbuntuFR.VaultpassNative.json
.cargo/: config.toml
.github/workflows/: ci.yml
data/: io.github.UbuntuFR.VaultpassNative.metainfo.xml
src/: main.rs
src/crypto/: cipher.rs  kdf.rs  mod.rs
src/database/: custom_fields.rs  importer.rs  mod.rs  models.rs  store.rs
src/ui/: autolock.rs  clipboard.rs  dialogs.rs  generator.rs  mod.rs  notepad.rs  prefs.rs  theme.rs  vault_context.rs
vendor-sources/gdk4/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/gdk4-sys/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/gio/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/glib/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/glib-sys/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/gsk4/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/gsk4-sys/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/gtk4/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/gtk4-sys/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
vendor-sources/pango/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
