[package]
name        = "vaultpass-native"
version     = "0.2.0"
edition     = "2021"

[dependencies]
libadwaita = { version = "0.9",  features = ["v1_7"] }
gtk4       = { version = "0.11", features = ["v4_14"] }
glib       = { version = "0.22" }
gdk4       = { version = "0.11", features = ["v4_14"] }
rusqlite   = { version = "0.32", features = ["bundled"] }
argon2     = { version = "0.5",  features = ["std"] }
aes-gcm    = { version = "0.10", features = ["std"] }
zeroize    = { version = "1.8",  features = ["derive"] }
serde      = { version = "1",    features = ["derive"] }
thiserror  = "1"
secrecy    = "0.8"
uuid       = { version = "1",    features = ["v4"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
