[package]
name        = "vaultpass-native"
version     = "0.2.0"
edition     = "2021"

[dependencies]
libadwaita = { version = "0.7",  features = ["v1_5"] }
gtk4       = { version = "0.9",  features = ["v4_12"] }
glib       = { version = "0.20" }
gdk4       = { version = "0.9",  features = ["v4_12"] }
rusqlite   = { version = "0.32", features = ["bundled"] }
argon2     = { version = "0.5",  features = ["std"] }
aes-gcm    = { version = "0.10", features = ["std"] }
zeroize    = { version = "1.8",  features = ["derive"] }
serde      = { version = "1",    features = ["derive"] }
serde_json  = { version = "1" }
thiserror  = "1"
secrecy    = "0.8"
uuid       = { version = "1",    features = ["v4"] }
libc = "0.2.183"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
